src/ReactComponents/JsonDisplayBox.css
.text-box-container {
  
  padding-bottom: 30px;
  -webkit-user-select:text;
  user-select:text;
  cursor: text;
  overflow: auto;
  width: 70vw;
  height: calc(90% - 20px);
  background-color: #040d08;
  border-radius: 20px;
  display: flex;
  justify-content:left;
  
  border: solid 10px #0b2416;
}


.text-box {
  max-width: 1140px;
  min-width: 1140px;
  height: fit-content;
  padding: 30px;
  display: flex;
  flex-wrap: wrap;
}


.full-page-width {
  width: 100%;
}


.content-text {
  width: fit-content;
}

